[gd_scene load_steps=2 format=3 uid="uid://cxr2ml63b6ngq"]

[ext_resource type="Script" path="res://EntryTemplates/onoff/onoff_entry.gd" id="1_85w0y"]

[node name="onoff_root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "does this thing work"
script = ExtResource("1_85w0y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="option_name" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="option_state" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "placeholder
"

[connection signal="tree_entered" from="HBoxContainer/option_name" to="." method="_on_option_name_tree_entered"]
[connection signal="toggled" from="HBoxContainer/option_state" to="." method="_on_option_state_toggled"]
[connection signal="tree_entered" from="HBoxContainer/option_state" to="." method="_on_option_state_tree_entered"]
